Bug 164102 - [25.2] The last thumbnail of Start Center may not be displayed
Summary: [25.2] The last thumbnail of Start Center may not be displayed
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
25.2.0.0 alpha0+
Hardware: All Windows (All)
: medium normal
Assignee: Andreas Heinisch
URL:
Whiteboard: target:25.8.0 target:25.2.0.0.beta2
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Start-Center
  Show dependency treegraph
 
Reported: 2024-11-30 10:51 UTC by nobu
Modified: 2025-02-21 23:12 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
sample mp4 (109.99 KB, video/mp4)
2024-12-01 22:38 UTC, nobu
Details

Note You need to log in before you can comment on or make changes to this bug.
Description nobu 2024-11-30 10:51:24 UTC
Description:
The thumbnail of the last line of the Start Center may not be displayed.

Steps to Reproduce:
1. Open Start Center.
2. At least 3 thumbnails are required.
3. go to File > Recent Documents to see the last file name.
4. Narrow the Start Center frame so that the last line is hidden.
  If there are three thumbnails, then one column and two rows should be displayed to hide the last thumbnail.
5. Scroll down to display the last row of thumbnails.


Actual Results:
6. Part of the last row of thumbnails will be visible during the scroll, but when you reach the bottom of the scroll, the last row of thumbnails will be obscured and the second-to-last row will be displayed.
  The last file name is not displayed.

Expected Results:
6. All thumbnails are displayed.


Reproducible: Always


User Profile Reset: No

Additional Info:

Reproducible with
Version: 25.2.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 44ccd392be12dad23e216fb3eb2c2e5b275eee75
CPU threads: 4; OS: Windows 10 X86_64 (10.0 build 19045); UI render: Skia/Vulkan; VCL: win
Locale: en-US (ja_JP); UI: en-US
Calc: CL threaded
Comment 1 nobu 2024-12-01 22:38:36 UTC
Created attachment 197891 [details]
sample mp4
Comment 2 nobu 2024-12-03 10:10:22 UTC
Not Reproduced with
Version: 24.8.3.2 (X86_64) / LibreOffice Community
Build ID: 48a6bac9e7e268aeb4c3483fcf825c94556d9f92
CPU threads: 4; OS: Windows 10 X86_64 (10.0 build 19045); UI render: Skia/Vulkan; VCL: win
Locale: ja-JP (ja_JP); UI: ja-JP
Calc: threaded
Comment 3 mkt 2024-12-03 11:35:36 UTC
Hi nobu,

Confirmed this is happening in Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: ce4ae4f082d8fe80da242836c57d55a456eac5e0
CPU threads: 2; OS: Windows 10 X86_64 (10.0 build 19045); UI render: Skia/Raster; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: threaded

It only happens when scrolling down to the very bottom in 25.2.0.0.alpha0+



This does NOT happen in Version: 24.8.2.1 (X86_64) / LibreOffice Community
Build ID: 0f794b6e29741098670a3b95d60478a65d05ef13
CPU threads: 2; OS: Windows 10 X86_64 (10.0 build 19045); UI render: Skia/Raster; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: threaded


I have set the status to NEW.
Comment 4 Buovjaga 2024-12-05 07:00:41 UTC
Andreas: more fun for you after 100743f8ad5a2328810af8b2ee19e535850ec901
tdf#162510 - Consider pinned items for the scroll bar in the start center

This is indeed seen clearest and most reliably when having only one row of thumbnails and then reducing the window width, so it's one column.
Comment 5 Commit Notification 2024-12-10 17:56:26 UTC
Andreas Heinisch committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/cd80b3cebca54f166c56501cd563397aee219ad1

tdf#164102 - Start Center: adjust first item only if there are pinned items

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2024-12-10 19:01:37 UTC
Andreas Heinisch committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/6996b70afb8b57ea3a590a37655d1098518cac0b

tdf#164102 - Start Center: adjust first item only if there are pinned items

It will be available in 25.2.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 nobu 2024-12-10 22:11:59 UTC
Thank you.
Comment 8 nobu 2024-12-11 22:30:02 UTC
(In reply to Buovjaga from comment #4)
> Andreas: 100743f8ad5a2328810af8b2ee19e535850ec901 
> tdf#162510以降はもっと楽しくなります- スタート センターのスクロール バーに固定アイテムを表示することを検討してください

Thumbnail images are not necessary for frequently used files.
We recommend using the Extension "Bookmarks Menu" which allows you to open registered files in any situation.
In addition, it has a variety of features.

https://extensions.openoffice.org/en/project/bookmarks-menu
Comment 9 Buovjaga 2024-12-12 08:12:27 UTC
(In reply to nobu from comment #8)
> (In reply to Buovjaga from comment #4)
> > Andreas: 100743f8ad5a2328810af8b2ee19e535850ec901 
> > tdf#162510以降はもっと楽しくなります- スタート センターのスクロール バーに固定アイテムを表示することを検討してください
> 
> Thumbnail images are not necessary for frequently used files.
> We recommend using the Extension "Bookmarks Menu" which allows you to open
> registered files in any situation.
> In addition, it has a variety of features.
> 
> https://extensions.openoffice.org/en/project/bookmarks-menu

If you don't like them, you can turn them off. See bug 74834.

Tools - Options - LibreOffice - Advanced - Open Expert Configuration, search for thumbnail to discover the setting officecfg::Office::Common::History::RecentDocsThumbnail and change it to false.