tdf#164102 - Start Center: adjust first item only if there are pinned items

Change-Id: I7c80efde04f037234a54ba0d063acd6bf48a903c
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/178206
Tested-by: Jenkins
Reviewed-by: Ilmari Lauhakangas <ilmari.lauhakangas@libreoffice.org>
Reviewed-by: Andreas Heinisch <andreas.heinisch@yahoo.de>